# ClaudeCodeReader

./: README.md  README_CN.md  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/development/: README.md  api-reference.md  architecture.md  backend-guide.md  build-deploy.md  changelog.md  components.md  contributing-fixers.md  data-structure-analysis.md  fixer-api-content.md  fixer-api-entry.md  fixer-api-file.md  fixer-api-full.md  fixers-guide.md  frontend-guide.md  known-issues.md  npm-distribution.md
docs/plans/: 2026-03-04-proxy-interceptor-design.md
npm/: README.md  package.json
npm/scripts/: postinstall.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: messages.rs  mod.rs  pet.rs  plugin.rs  projects.rs  proxy.rs  retrospect.rs  settings.rs  skill.rs  tools.rs
src-tauri/src/models/: display.rs  message.rs  mod.rs  pet.rs  plugin.rs  project.rs  proxy.rs  retrospect.rs  settings.rs  skill.rs
src-tauri/src/services/: cache.rs  classifier.rs  export.rs  file_guard.rs  mod.rs  parser.rs  pet.rs  plugin.rs  retrospect.rs  scanner.rs  skill.rs  transformer.rs
src-tauri/src/services/fixers/: mod.rs  patch_anyrouter.rs  patch_toolsearch.rs  restore_toolsearch.rs  strip_images.rs  strip_thinking.rs
src-tauri/src/services/proxy/: config_guard.rs  forwarder.rs  interceptor.rs  mod.rs  recorder.rs  server.rs
src-tauri/src/utils/: mod.rs  path.rs
src/components/: ChatView.tsx  EnvSwitcher.tsx  HighlightedText.tsx  MarkdownRenderer.tsx  MessageBlockList.tsx  MessageContentRenderer.tsx  MessageDropZone.tsx  NavSearchBar.tsx  NewMessageEditor.tsx  PetManager.tsx  PluginsManager.tsx  ProxyPanel.tsx  QuickFixModal.tsx  SettingsPanel.tsx  Sidebar.tsx  SkillsManager.tsx  ToolResultRenderer.tsx  ToolUseRenderer.tsx  index.ts
src/components/retrospect/: EditorPane.tsx  FileTree.tsx  ResizableSplitter.tsx  RetrospectView.tsx  TimelineBar.tsx  TopBar.tsx  WindowsExplorer.tsx
src/hooks/: useCollapsible.ts  useProgressiveRender.ts
src/types/: claude.ts  pet.ts  retrospect.ts
src/utils/: claudeData.ts  messageTransform.ts  rehypeHighlight.ts  retrospectData.ts  toolFormatter.ts
