[package]
name = "claude-code-reader"
version = "2.1.0-rc.1"
description = "Claude Code Reader - 查看和管理Claude Code聊天记录"
authors = ["Claude Code Reader"]
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.85"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
# 文件管理器集成：使用 OS 原生 API 在文件管理器中定位文件
# Windows 用 Shell COM API，macOS 用 NSWorkspace，Linux 用 D-Bus
tauri-plugin-opener = "2"
# 异步文件 I/O：利用 Tauri 自带的 tokio runtime 进行并行文件扫描
tokio = { version = "1", features = ["fs", "rt"] }
# 跨平台主目录获取：用于定位 ~/.claude/ 和 ~/.mo/CCR/ 目录
dirs = "6"
# 正则表达式：仅用于计划执行消息检测（2 个预编译模式）
regex = "1"
# 数据并行：大会话的并行分类（map-reduce 模式）
rayon = "1.10"
# SIMD 加速子串搜索：后端文本搜索核心
memchr = "2"
