[package]
name = "claude-code-reader"
version = "2.2.0-rc.1"
description = "Claude Code Reader - 查看和管理Claude Code聊天记录"
authors = ["Claude Code Reader"]
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.85"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
# 文件管理器集成：使用 OS 原生 API 在文件管理器中定位文件
# Windows 用 Shell COM API，macOS 用 NSWorkspace，Linux 用 D-Bus
tauri-plugin-opener = "2"
# 异步文件 I/O：利用 Tauri 自带的 tokio runtime 进行并行文件扫描
# process feature 用于 ToolSearch 修复项异步执行 npm/pnpm 命令探测安装路径
tokio = { version = "1", features = ["fs", "rt", "sync", "time", "net", "macros", "process"] }
# 跨平台主目录获取：用于定位 ~/.claude/ 和 ~/.mo/CCR/ 目录
dirs = "6"
# 正则表达式：仅用于计划执行消息检测（2 个预编译模式）
regex = "1"
# 数据并行：大会话的并行分类（map-reduce 模式）
rayon = "1.10"
# SIMD 加速子串搜索：后端文本搜索核心
memchr = "2"
# === 中转抓包代理功能 ===
# HTTP/1.1 服务器：本地代理监听端口，接收 Claude Code CLI 的 HTTP 请求
hyper = { version = "1", features = ["server", "http1"] }
# hyper 工具库：提供 TokioIo 适配器和连接处理辅助
hyper-util = { version = "0.1", features = ["tokio"] }
# HTTP body 工具：hyper 1.x 的 body 类型转换和组合
http-body-util = "0.1"
# HTTPS 客户端：将代理收到的请求转发到上游 Anthropic API
reqwest = { version = "0.12", features = ["stream", "json"] }
# HTTP 类型库：Request/Response/StatusCode 等基础类型
http = "1"
# 字节缓冲区：高效零拷贝字节流处理
bytes = "1"
# 异步流处理：SSE 流式响应的 StreamExt trait
futures-util = "0.3"
